------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

July 14 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Monster invisibility works again correctly
	* Fixed a small border tile bug

July 14 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Bug related to multisquared characters corrected
	* Now compiles with GCC again.

July 11 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added border tiles to earth
	* Wand of door creation no longer crashes
	* Corey's level no longer crashes, I think

July 9 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* StepOn effects work again

July 9 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added support for multi-tile characters and items
	* 32x32 genetrix vesana and Elpuri added to char.pcx by Kahvi
	* Genetrix vesana, Elpuri and their corpses are now 2x2 squares large
	* Earth with border tiles added to olterra.pcx by Kahvi
	* Sumo wrestler added to humanoid.pcx by Kahvi
	* Removed boots of the (Master) Porter
	* Corrected a bug in the lock configuration creation code
	* The enner beast is now quite funnily animated
	* The holy banana can no longer be cloned
	* Mages are now a little less insane opponents
	* Corrected a highly abusable problem in the polymorph control code
	* Added numerous bugs

July 9 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Chests in inventory can be unlocked/locked.
	* Possible abuse prohibited in key-code 

	1 : unlock chest
	2 : lock chest
	3 : goto 1
	(gives dex)

July 8 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a fatal bug in the level loading code

July 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* No more funny snow covered boulders in weird places like New Attnam
