@@ -61,7 +61,7 @@ Dungeon ELPURI_CAVE;
 
 	LevelDefault
 	{
-		FillSquare = solidterrain(GROUND),wall(EARTH);
+		FillSquare = solidterrain(GROUND),earth;
 		Size = 64, 36;
 		Rooms = 10:30;
 		Items = 25:50;
@@ -309,7 +309,7 @@ Dungeon ELPURI_CAVE;
 		
 			GenerateLanterns = false;
 			GenerateFountains = false;
-			WallSquare = solidterrain(GROUND),wall(EARTH);
+			WallSquare = solidterrain(GROUND),earth;
 			GenerateDoor = false;
 			GenerateTunnel = false;
 			AltarPossible = false;
@@ -1413,7 +1413,7 @@ Dungeon UNDER_WATER_TUNNEL;
 
 	LevelDefault
 	{
-		FillSquare = solidterrain(GROUND),wall(EARTH);
+		FillSquare = solidterrain(GROUND),earth;
 		Size = 80, 20;
 		Rooms = 5:10;
 		Items = 15:30;
@@ -1637,14 +1637,14 @@ Dungeon UNDER_WATER_TUNNEL;
 		MonsterAmountBase = 15;
 		LevelMessage = "The air feels thick and damp, and there are strange crystals sprouting from the ground, emitting soft glows of many colors.";
 		AmbientLight = rgb24(50, 50, 50);
-		FillSquare = solidterrain(DARK_GRASS_TERRAIN), STONE wall(EARTH);
+		FillSquare = solidterrain(DARK_GRASS_TERRAIN), STONE earth;
 
 		RoomDefault
 		{
 			Size = 8:17,8:17;
 			GenerateLanterns = false;
 			Shape = ROUND_CORNERS;
-			WallSquare = solidterrain(DARK_GRASS_TERRAIN), STONE wall(EARTH);
+			WallSquare = solidterrain(DARK_GRASS_TERRAIN), STONE earth;
 			FloorSquare = STONE solidterrain(DARK_GRASS_TERRAIN), 0;
 			AltarPossible = false;
 		}
