@@ -708,73 +708,6 @@ material
 		IsGolemMaterial = true;
 		Color = rgb16(150, 150, 170);
 		Article = "a";
-		NameStem = "crystal";
-		AdjectiveStem = "crystal";
-		Alpha = 150;
-		AttachedGod = TERRA;
-		IsMetal = false;
-		Emitation = rgb24(135, 135, 160);
-		IsSparkling = true;
-	}
-
-	Config PURPLE_CRYSTAL;
-	{
-		StrengthValue = 130;
-		ConsumeType = CT_MINERAL; /* correct someday */
-		Density = 450;
-		IsGolemMaterial = true;
-		Color = rgb16(175, 150, 175);
-		Article = "a";
-		NameStem = "crystal";
-		AdjectiveStem = "crystal";
-		Alpha = 150;
-		AttachedGod = TERRA;
-		IsMetal = false;
-		Emitation = rgb24(175, 150, 175);
-		IsSparkling = true;
-	}
-
-	Config GREEN_CRYSTAL;
-	{
-		StrengthValue = 130;
-		ConsumeType = CT_MINERAL; /* correct someday */
-		Density = 450;
-		IsGolemMaterial = true;
-		Color = rgb16(150, 175, 150);
-		Article = "a";
-		NameStem = "crystal";
-		AdjectiveStem = "crystal";
-		Alpha = 150;
-		AttachedGod = TERRA;
-		IsMetal = false;
-		Emitation = rgb24(135, 155, 135);
-		IsSparkling = true;
-	}
-
-	Config DARK_GRASS;
-	{
-		StrengthValue = 2;
-		ConsumeType = CT_MISC_ORGANIC;
-		Density = 100;
-		Color = rgb16(75, 100, 75);
-		IsFlammable = true;
-		NameStem = "grass";
-		AdjectiveStem = "grassy";
-		Flexibility = 15;
-		CanBeWished = false;
-		AttachedGod = SILVA;
-		IsAlive = true;
-		CanRegenerate = true;
-	}
-
-	Config BLUE_CRYSTAL;
-	{
-		StrengthValue = 130;
-		ConsumeType = CT_MINERAL; /* correct someday */
-		Density = 450;
-		IsGolemMaterial = true;
-		Color = rgb16(150, 150, 170);
-		Article = "a";
 		NameStem = "blue crystal";
 		AdjectiveStem = "crystal";
 		Alpha = 150;
